Fixed image sizes being too big.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,7 +16,10 @@ body,
 }
 
 .restaurant-img {
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .nav,
